@@ -7,6 +7,7 @@
     * TASK #58: add main category and canonical url for category detail views
     * BUGFIX #73: change output of product variants sku to variants completeSku for products with variants in cart and order mail
     * TASK #68: add signal slot for checking products before adding them to cart
+    * TASK #76: realurl improvements
 
 2.4.3
     2017-02-18
